# airflow_lab

./: README.md  pyproject.toml  requirements.txt  test.py
src/: make_avro_data.py  개요.md
src/data/: user_data_2024-11-22.avro
src/producer/: producer.py
src/schemas/: register_schema.py
