[tool.poetry]
name = "airflow-lab"
version = "0.1.0"
description = ""
authors = ["kyungjunleeme <kyungjunlee.me@gmail.com>"]
readme = "README.md"
packages = [{include = "airflow_lab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apache-airflow = "^2.10.3"
pytest = "^8.3.3"
avro = "^1.12.0"
confluent-kafka = "^2.6.1"
fastavro = "^1.9.7"
pre-commit = "^4.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
